Deployments/blue-green/blue-green-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-deployment-green
  labels:
    role: green
  namespace: notes-user-deploy
spec:
  
  replicas: 2
  selector:
    matchLabels:
      role: green
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: notes:v1.1.15
      labels:
        role: green
    spec:
      containers:
      - name: notes-deployment-green
        image: registry.prashanth.private:5000/notes:v1.1.15
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 800
          containerPort: 810
        volumeMounts:
          - mountPath: /etc/hosts
            name: hosts
          - mountPath: /var/log/nginx
            name: ngix-logs
      volumes:
        - name: hosts
          hostPath:
            path: /etc/hosts
            
        - name: ngix-logs
          hostPath:
            path: /var/log/nginx
