Deployments/blue-green/notes_blue-green_traffic-switch-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-blue-green-service
  namespace: notes-user-deploy
spec:
  type: NodePort
  ports:
  - nodePort: 30166
    port: 111
    targetPort: 80
    port: 112
    targetPort: 80
    protocol: TCP
  selector:
    role: green

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-blue-green-deply-ingress
  namespace: notes-user-deploy
spec:
  rules:
  - host: www.prashanthgnotes.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-blue-green-service
            port:
              number: 111
              number: 112
  ingressClassName: nginx
